# makair-simulator

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  build.rs
data/: display.py  display_experiment_results.py  display_simulation_results.py  log_parser.py  log_simulator.csv  requirements.txt
data/experiment_output/: test1.csv
data/simulation_output/: log_simulator.csv
examples/: main.rs
includes/: Arduino.h  CRC32.h  activation.h  alarm.h  alarm_controller.h  battery.h  blower.h  buzzer.h  buzzer_control.h  config.h  constants.h  cpu_load.h  cycle.h  debug.h  hello_world.h  helper.h  logger.h  main.h  main_controller.h  model.h  model_system.h  parameters.h  patient_model.h  pc_ac_controller.h  pc_bipap_controller.h  pc_cmv_controller.h  pc_vsai_controller.h  pressure_valve.h  rpi_watchdog.h  screen.h  serial_control.h  serialib.h  simu_state_machine.h  simulator.h  stm32yyxx_ll_utils.h  telemetry.h  vc_ac_controller.h  vc_cmv_controller.h  ventilation_controller.h
rust-launcher/: .gitignore  Cargo.toml  README.md  build.rs
rust-launcher/.cargo/: config
rust-launcher/src/: main.rs  simulator.rs
src/: lib.rs
srcs/: Arduino.cpp  Arduino.h  CRC32.cpp  CRC32.h  activation.cpp  alarm.cpp  alarm_controller.cpp  battery.cpp  blower.cpp  buzzer.cpp  buzzer_control.cpp  cpu_load.cpp  gxx_personality_v0_stub.cpp  hello_world.cpp  logger.cpp  main.cpp  main_controller.cpp  model.cpp  model_system.cpp  patient_model.cpp  pc_ac_controller.cpp  pc_bipap_controller.cpp  pc_cmv_controller.cpp  pc_vsai_controller.cpp  pressure_valve.cpp  rpi_watchdog.cpp  serial_control.cpp  serialib.cpp  simu_state_machine.cpp  simulator.cpp  telemetry.cpp  vc_ac_controller.cpp  vc_cmv_controller.cpp
srcs/LL/: stm32yyxx_ll_utils.h
utils/: git-rm-symlinks.txt  install-libs.sh  install_simulator.sh
