[package]
name = "makair-simulator"
version = "0.1.0"
authors = ["Gabriel Moneyron <gabriel@cooprint.fr>", "David Sferruzza <david.sferruzza@gmail.com>"]
build = "build.rs"
edition = "2021"

[dependencies]
log = "0.4.14"
makair-telemetry = { git = "https://github.com/makers-for-life/makair-telemetry.git", rev = "184185d4301fa7343018cd6733e1fb23e2cb032e", default-features = false }

[dev-dependencies]
env_logger = "0.9.0"

[build-dependencies]
cc = "1.0.72"

[lib]
name = "makair_simulator"
path = "src/lib.rs"
