[package]
name = "makair-simulator-rust"
version = "0.1.0"
authors = ["Gabriel Moneyron <gabriel@cooprint.fr>", "David Sferruzza <david.sferruzza@gmail.com>"]
build = "build.rs"
edition = "2021"

[dependencies]
env_logger = "0.9.0"
libc = "0.2.106"
log = "0.4.14"
makair-telemetry = { git = "https://github.com/makers-for-life/makair-telemetry.git", rev = "2c929224375d7791be66a72e535386798ee8f340", default-features = false }

[build-dependencies]
cc = "1.0.71"
